# grafana-openlit-langchain-anthropic

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chat.py  docker-compose.yml  env.example  pyproject.toml
alloy/: config.alloy
